# pei-nwdaf-data-ingestion

./: .env.example  .gitignore  Dockerfile  README.md  auth_middleware.py  docker-compose.yml  jenkinsfile  pyproject.toml  receiver.py  registry.py  requirements.txt  subscription_registry.py
.github/workflows/: cicd.yml  jenkins.yml  update-submodule.yml
tests/: conftest.py  test_receiver.py  test_registry.py
