[project]
name = "ingestion-service"
version = "0.1.0"
description = ""
authors = [{name = "Alexandre Andrade", email = "alexandreandrade@ua.pt"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.121.3",
    "python-dotenv==1.2.1",
    "uvicorn==0.34.0",
    "kafka-python==2.0.2",
    "bandit==1.8.0",
    "safety==2.3.5",
    "six>=1.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ingestion_service"]
