[project]
name = "ingestion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.121.3",
    "python-dotenv==1.2.1",
    "uvicorn==0.34.0",
    "confluent-kafka==2.12.2",
    "websockets==14.1",
    "requests>=2.32",
    "policy-client-sdk @ git+https://github.com/ATNoG/pei-nwdaf-policy.git#subdirectory=client_sdk",
]

[project.optional-dependencies]
dev = [
    "bandit==1.8.0",
    "safety==2.3.5",
    "pytest==8.3.4",
    "httpx==0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
